# seqrepo-rs-experiment

./: Cargo.toml  LICENSE
.github/workflows/: ci.yaml
scripts/: dynamodb.py
src/: api.rs  dynamodb.rs  import.rs  main.rs
