[package]
name = "seqrepo-rs-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.71.0"
axum = "0.8.3"
clap = { version = "4.5.35", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_dynamo = "4.2.14"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
